src/scss/pages/_home.scss
// Tiles

$tile-link-color: $palette-maroon;
$tile-transparent-white: rgba(255, 255, 255, 0.9);
$tile-transparent-maroon: rgba(102, 0, 68, 0.9);

.home {

  background-color: $home-background-color;

  .block-main {
    flex-basis: 100%;
  }

  .content {

    margin: 0 auto;
    max-width: 400px;
    padding: 1em 0.5em;

    @include breakpoint(xs) {
      max-width: 700px;
      padding: 1em;
    }

    @include breakpoint(sm) {
      padding: 1em;
    }

    @include breakpoint(md) {
      max-width: 900px;
      padding: 1em 0;
    }

  }

  .page,
  .tile-group {
    align-items: stretch;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-between;

    @include breakpoint(xs) {
      display: flex;
    }
  }

  .page {
    flex-basis: 100%;
  }
}

.tile {
  background-color: $white;
  box-sizing: border-box;
  display: flex;
  margin: 0 0 15px 0;
  position: relative;

  @include breakpoint(xs) {
    flex-basis: 48.5%;
  }

  @include breakpoint(md) {
    flex-basis: 281px;

    .overflow {
      display: block;
    }
  }
}

.tile-body,
.tile-link {
  bottom: 0;
  display: block;
  left: 0;
  right: 0;

  &:hover {
    text-decoration: none;
  }
}

.tile-link {
  @include material-plus-one;
  top: 0;
  width: 100%;
}

.tile-body {
  background-color: $tile-transparent-white;
  color: $tile-link-color;
  padding: 0.75em;
  transition: background-color 0.2s ease-in-out;
  z-index: 100;

  h3 {
    color: $tile-link-color;
    line-height: 1.2em;
    margin: 0;

    @include breakpoint(xs) {
      margin: 0 0 0.25em 0;
    }
  }

  p {
    color: $black;
    display: none;
    font-size: 17px;
    line-height: 1.3em;
    margin: 0;

    @include breakpoint(xs) {
      display: block;
    }
  }
}

.tile-featured {
  background-position: 0 0;
  background-repeat: no-repeat;
  min-height: 182px;
  opacity: 0.95;
  transition: opacity 0.2s ease-in-out;

  @include breakpoint(xs) {
    min-height: 370px;
  }

  .tile-body,
  .tile-link {
    position: absolute;
  }

  &:hover {
    opacity: 1;

    .tile-body {
      background-color: $white;
    }
  }
}

.tile-wide {
  flex-basis: 100%;

  @include breakpoint(md) {
    flex-basis: 580px;
  }
}

.tile-sidebar {
  @include breakpoint(md) {
    flex-basis: 300px;
  }
}

.tile-buy {
  background-color: transparent;
  background-image: url($handbook-cover);
  background-position: center 0;
  background-repeat: no-repeat;
  background-size: 251px 300px;
  min-height: 360px;
}

.order-button-container {
  bottom: 5px;
  left: 0;
  position: absolute;
  right: 0;
  text-align: center;
}

.order-button {
  @include material-plus-one;
  font-weight: $default-font-bold;
}

.tile-recent-posts {
  background-color: transparent;
  flex-basis: 100%;

  @include breakpoint(md) {
    flex-basis: 300px;
  }

  h3 {
    border-bottom: solid 1px $palette-orange;
    font-size: 1.1em;
    margin: 0 0 0.5em 0;
    text-transform: uppercase;
  }

  ul {
    list-style: none;
    margin: 0.75em 0;
    padding: 0;
  }

  li {
    margin: 0.75em 0;
  }

  h4 {
    font-size: 17px;
    font-weight: $default-font-bold;
    line-height: 1.2em;
    margin-bottom: 0.25em;

    a {
      color: $mla-blue;
    }
  }

  p {
    font-size: 15px;
  }

  .tile-body {
    background-color: transparent;
    padding: 1em 0 0 0.5em;
  }
}

.tile-citation {
  background-image: url($tile-placeholder-works-cited);
  background-position: center -150px;
  background-size: 525px 350px;

  @include breakpoint(xs) {
    background-position: center -290px;
    background-size: 1050px 700px;
  }

  .tile-body {
    background-color: $tile-transparent-maroon;
  }

  h3,
  p {
    color: $white;
  }

  &:hover .tile-body {
    background-color: $palette-maroon;
  }
}

.tile-about {
  background-image: url($tile-placeholder-about);
  background-position: -100px -30px;
  background-size: 500px 266px;

  @include breakpoint(xs) {
    background-position: -220px -30px;
    background-size: 600px 400px;
  }
}

.tile-faq {
  background-image: url($tile-placeholder-faq);
  background-position: center -180px;
  background-size: 420px 420px;

  @include breakpoint(xs) {
    background-position: center -250px;
    background-size: 620px 620px;
  }

  .tile-tag {
    padding-left: 8px;
  }
}

.tile-teaching {
  background-image: url($tile-placeholder-teaching);
  background-position: 0 -50px;
  background-size: 400px 275px;

  @include breakpoint(xs) {
    background-position: -50px -100px;
    background-size: 700px 500px;
  }
}

.tile-blog {
  background-image: url($tile-placeholder-blog);
  background-position: -100px -100px;
  background-size: 600px 466px;

  @include breakpoint(xs) {
    background-position: -100px -150px;
    background-size: 800px 666px;
    min-height: 280px;
  }

  @include breakpoint(md) {
    background-position: -100px -150px;
    background-size: 700px 600px;
  }
}

.tile-tag {
  background: $palette-maroon;
  color: $white;
  font-weight: $default-font-normal;
  padding: 5px 10px;
  position: absolute;
  right: 0;
  text-transform: uppercase;
  top: 0;

  &::before {
    margin-right: 0.5em;
  }
}

